igw.tf
# Internet-gateway for vpc
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.eks_vpc.id
  tags   = { Name = "${local.vpc_name}-igw" }
}
